--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "test": "set NODE_ENV=test && jest --runInBand --coverage --colors --detectOpenHandles --forceExit --verbose"
+    "test": "set NODE_ENV=test && jest --runInBand --colors --detectOpenHandles --forceExit --verbose"
   },
   "author": "",
   "license": "ISC",
